# sar-simulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  plan.md  vcpkg.json
config/: default.json
docs/: INTEGRATION.md  SETUP.md
src/: config.cpp  config.h  hud.cpp  hud.h  joystick.cpp  joystick.h  main.cpp  recorder.cpp  recorder.h  video.cpp  video.h
